# autokitteh

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser-ee.yaml  .goreleaser-opensource.yaml  .goreleaser.yaml  .goreleaser.yml  .readthedocs.yaml  .typos.toml  CODEOWNERS  Dockerfile  LICENSE  Makefile  NOTICE  README.md  atlas.hcl  compose-postgres.yaml  compose.yaml  go.mod  go.sum  main.py  manifest.schema.yaml  nginx.conf  package-lock.json  package.json  tailwind.config.js
api/: README.md
assets/: assets.go
config/: config.go
crypt/: common  data.gpg  lock  save  unlock
cue.mod/: module.cue  pkg.go
docs/: README.md  autokitteh.yaml  cli-auth-flow.md  cli_walkthrough.md  life_of_a_connection.md  life_of_an_event.md  logging.md  project_deep_dive.md  server_setup.md  temporal-workers.md
integrations/: Makefile  README.md  auth.go
libs/: libs.go
migrations/: README.md  migrations.go
proto/: Makefile  buf.gen.yaml  buf.remote.gen.yaml  buf.yaml  proto_test.go  pyproject.toml  remote.proto  svcnames.go  validate.go  validate_test.go
proto/autokitteh/apply/v1/: svc.proto
proto/autokitteh/auth/v1/: svc.proto
proto/autokitteh/builds/v1/: build.proto  svc.proto
proto/autokitteh/common/v1/: status.proto
proto/autokitteh/connections/v1/: connection.proto  svc.proto
proto/autokitteh/deployments/v1/: deployment.proto  svc.proto
proto/autokitteh/dispatcher/v1/: svc.proto
proto/autokitteh/envs/v1/: env.proto  svc.proto
proto/autokitteh/events/v1/: event.proto  svc.proto
proto/autokitteh/integration_provider/v1/: integration.proto  svc.proto
proto/autokitteh/integration_registry/v1/: integration.proto  svc.proto
proto/autokitteh/integrations/v1/: integration.proto  svc.proto
proto/autokitteh/mappings/v1/: mapping.proto  svc.proto
proto/autokitteh/module/v1/: module.proto
proto/autokitteh/notifications/v1/: notification.proto  svc.proto
proto/autokitteh/oauth/v1/: svc.proto
proto/autokitteh/orgs/v1/: org.proto  svc.proto
proto/autokitteh/policy/v1/: svc.proto
proto/autokitteh/program/v1/: module.proto  program.proto
proto/autokitteh/projects/v1/: project.proto  svc.proto
proto/autokitteh/remote/v1/: remote.proto  runner_manager_svc.proto  types.proto  user_code_handler_svc.proto  user_code_runner_svc.proto
proto/autokitteh/runner_manager/v1/: runner_manager_svc.proto  svc.proto
proto/autokitteh/runtimes/v1/: build.proto  run.proto  runtime.proto  svc.proto
proto/autokitteh/secrets/v1/: svc.proto
proto/autokitteh/sessions/v1/: session.proto  svc.proto
proto/autokitteh/store/v1/: svc.proto
proto/autokitteh/triggers/v1/: svc.proto  trigger.proto
proto/autokitteh/user_code/v1/: handler_svc.proto  runner_svc.proto  user_code.proto
proto/autokitteh/users/v1/: svc.proto  user.proto
proto/autokitteh/values/v1/: values.proto
proto/autokitteh/vars/v1/: svc.proto  var.proto
proto/remote/: remote.proto
proto/scripts/: fix_remote_py.sh  fixpy.sh
py/: Makefile
runtimes/pythonrt/py-sdk/: .gitignore  Makefile  README.md  autokitteh.py  autokitteh_test.py  dev-requirements.txt  embed.go  embed_test.go  pyproject.toml  requirements.txt
runtimes/pythonrt/py-sdk/autokitteh/: __init__.py  activities.py  activity.py  aio.py  airtable.py  anthropic.py  asana.py  atlassian.py  attr_dict.py  auth0.py  aws.py  azurebot.py  connections.py  decorators.py  discord.py  errors.py  event.py  events.py  gemini.py  github.py  google.py  height.py  hubspot.py  jira.py  kubernetes.py  linear.py  microsoft.py  notion.py  oauth2_session.py  openai.py  outcomes.py  packages.py  pipedrive.py  pydantic.py  reddit.py  redis.py  salesforce.py  sdktest.py  signals.py  slack.py  (+6 more)
runtimes/pythonrt/py-sdk/docs/: conf.py  gen-index.py  gen-reqs.py  index.rst  requirements.txt
runtimes/pythonrt/py-sdk/tests/: __init___test.py  activities_test.py  aio_test.py  asana_test.py  atlassian_test.py  attr_dict_test.py  attrdict_test.py  auth0_test.py  autokitteh_test.py  aws_test.py  connections_test.py  decorators_test.py  discord_test.py  docs_test.py  errors_test.py  event_test.py  events_test.py  github_test.py  google_test.py  height_test.py  hubspot_test.py  microsoft_test.py  oauth2_session_test.py  openai_test.py  packages_test.py  salesforce_test.py  signals_test.py  slack_test.py  telegram_test.py  twilio_test.py  zoom_test.py
scripts/: akd-docker.sh  akd.sh  gcc-on-arm.sh  nginx.conf  (+2 more)
(+3310 files in other folders)
