[project]
name = 'autokitteh'
version = '0.8.1' # Must match the version in runner/pyproject.toml.
description = 'AutoKitteh Python SDK'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>= 3.11'

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Note: If you update these dependencies, run `gen-reqs.py` from the `docs` directory.
[project.optional-dependencies]
# The AutoKitteh environment when running workflows
all = [
	# Integrations
	"anthropic ~= 0.54.0",
	"asana ~= 5.0",
	"atlassian-python-api ~= 3.41",
	"auth0-python ~= 4.7",
	"azure-identity ~= 1.19",
	"boto3 ~= 1.35",
	"discord.py ~= 2.5",
	"google-api-python-client ~= 2.155",
	"google-auth-httplib2 ~= 0.2",
	"google-auth-oauthlib ~= 1.2",
	"google-generativeai ~= 0.8",
	"gspread ~= 6.2",
	"gspread-formatting ~= 1.2",
	"hubspot-api-client ~= 11.1",
	"kubernetes ~= 31.0",
	"msgraph-sdk ~= 1.18",
	"notion_client ~= 2.0",
	"openai ~= 1.57",
	"pipedrive-python-lib ~= 1.2",
	"praw ~= 7.8",
	"pyairtable ~= 3.1",
	"PyGithub ~= 2.6",
	"simple-salesforce ~= 1.12",
	"slack-sdk ~= 3.33",
	"twilio ~= 9.4",

	# General
	"beautifulsoup4 ~= 4.12",
	"grpcio ~= 1.68",
	"grpcio-reflection ~= 1.68",
	"PyYAML ~= 6.0",
	"requests ~= 2.32",
	"requests-toolbelt ~= 1.0",
	"tenacity ~= 9.0",
]

dev = [
	"ruff ~= 0.7",
	"pytest ~= 8.3",
]

[tool.setuptools.packages.find]
include = ["autokitteh", "autokitteh.*"]

[tool.setuptools.package-data]
autokitteh = ["py.typed"]
